fix stretched images

--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ section {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    max-height: 500px;
     transition: opacity 0.1s linear;
 }
 
@@ -487,8 +488,6 @@ footer:hover {
     position: relative;
     box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.5);
     display: grid;
-    grid-template-columns: 1fr min-content;
-    grid-template-rows: auto 1fr;
 }
 
 .modalHeader {
@@ -504,7 +503,6 @@ footer:hover {
 
 .modalBody {
     position: relative;
-    display: inherit;
 }
 
 .modalBody .link {
@@ -676,6 +674,10 @@ footer:hover {
     .portfolio > h3,
     .contact > h2 {
         font-size: 2em;
+    }
+    .projectImg,
+    .modalHeaderImage {
+        object-fit: contain;
     }
 }
 
